# zima

./: .env  .gitignore  CLAUDE.md  README.md  keep_sync.py
cad_models/: 90MG_Mount.FCStd  996R_Mount.FCStd  zima_arm_elbow_to_wrist.FCStd  zima_arm_hand_to_fingers.FCStd  zima_arm_shoulder.FCStd  zima_arm_shoulder_to_elbow.FCStd  zima_arm_test_base.FCStd  zima_arm_wrist_to_hand.FCStd  zima_arm_wrist_to_handv2.FCStd  zima_camera_mount.FCStd  zima_frameV1.FCStd  zima_track_adaptor.FCStd
dcmotor/: dcmotor.ino
docs/: commands.txt  planning.txt
models/: robot.urdf  robot_arm_ikpy.urdf
motor_control/: motor_control.ino
notes/: ai_notes.txt
scripts/gpt/: cloud_setup.bash  cloud_start.bash
scripts/zima/: cloud_setup.bash  cloud_start.bash  reupload_cloud_setup.bash
src/: requirements.txt
src/configs/: act_train_config_example.json
src/imitation_learning/: mujoco_simulation.py  requirements.txt  teleop_server.py  train.py  zima_dataloader.py
src/lerobot_robot_zima/: README.md  pyproject.toml
src/lerobot_robot_zima_robot/: pyproject.toml
src/lerobot_robot_zima_robot/lerobot_robot_zima_robot/: __init__.py  zima_robot.py  zima_robot_config.py
src/lerobot_teleoperator_zima_ps3_teleop/: README.md  pyproject.toml
src/lerobot_teleoperator_zima_ps3_teleop/lerobot_teleoperator_zima_ps3_teleop/: __init__.py  gamepad_utils.py  zima_ps3_teleop.py  zima_ps3_teleop_config.py
src/scripts/: clear_dataset_cache.bash  record_dataset.bash  reinstall_zima_lerobot_packages.bash  replay_dataset.bash  teleoperate.bash  train_act.bash
src/sim/: controller.py  flat_world.py  (+4 more)
(+187 files in other folders)
